minimal updates to downe and lawrence races

--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -136,47 +136,12 @@
               <h6 class="page-title">John Tisa</h6>
               <p>          
 
-                John Tisa is the incumbent candidate for Lawrence Township Committee and is currently seeking reelection. As a sitting official, Tisa benefits from the built-in visibility 
-                that comes with public office—he attends township meetings, participates in votes, and interacts regularly with local officials. In theory, this should make him one of the 
-                most transparent figures on the ballot.
+                John Tisa is currently serving on the Lawrence Township Committee and is seeking re-election. While he maintains a personal Facebook account and has some public 
+                background information, there is no campaign website, public platform, or issue-based messaging tied to this race.
                 <br>
                 <br>
-                However, the utility of that default transparency depends on whether the information is well maintained and easily accessible. Without a centralized campaign site, many voters 
-                that don't regularly pay attention may have no idea about his platform, and those that do might only have scattered impressions about where he stands on specific issues. 
-                <br>
-                <br>
-                For example, with our interactions with Lawrence Township, it has become clear that there is an issue with maintaining the township site, especially with meeting minutes.
-                Tisa has said that he is in the process of working on that, but we wouldn't have known that without attending the bi-weekly Republican breakfasts, and we don't know what 
-                the current status of those efforts are. In other words, how is the average voter supposed to know any of this when reviewing their choices near elections?
-                <br>
-                <br>
-                Tisa does attend Republican breakfasts frequently, has placed lawn signs, and has at least one known meet-and-greet scheduled—but that event was only discoverable through 
-                partisan word-of-mouth, not any formal public-facing campaign effort that we're aware of.
-                <br>
-                <br>
-                He has:
-                <ul>
-                    <li>No campaign website</li>
-                    <li>Not responded to information requests</li>
-                    <li>Not identified or clarified where he stands on key local issues
-                    </li>
-                    <li>Offered no formal messaging beyond casual comments at breakfast events</li>
-                </ul>
-
-                <br>
-                <br>
-                This isn't just about checking boxes—it’s about recognizing that voters like those following InformTheVoteNJ are actively seeking information and coming up empty because 
-                candidates like Tisa haven’t prioritized outreach beyond the party structure, at least to our knowledge. If the overall county infrastructure for public information were 
-                stronger, perhaps these communication gaps would be less noticeable. But in the absence of a robust county-wide PR system, candidates bear more responsibility to close the 
-                loop themselves.
-                <br>
-                <br>
-                For these reasons, John Tisa receives a below-average to average transparency rating. He’s not completely absent—but his approach remains rooted in a status quo that no longer meets 
-                the public’s expectations for open, accessible, and voter-focused communication in the modern, fast-paced, tech-based culture.
-                <br>
-                <br>
-                A campaign website, clear policy statements, and participation in a candidate forum would quickly elevate him to a much more favorable transparency tier—and would help 
-                voters understand what he’s done, where he stands, and how he plans to handle his potential tenure moving forward.
+                Despite being an incumbent, Tisa has not participated in any public interviews or responded to outreach efforts, leaving voters without clear insight into his 
+                priorities or plans moving forward.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -207,6 +172,7 @@
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
                  
+                <a href="https://www.facebook.com/john.tisa.7" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>                 
                  
              </div>
 
