--- a/child_pages/cc-elections/downe_township_committee.html
+++ b/child_pages/cc-elections/downe_township_committee.html
@@ -117,15 +117,19 @@
           <h6 class="page-title">Downe Township Committee</h6>
           <p>
             
-            The Downe Township committee has two seats open this year. Two candidates, Michael Rothman and Larry Jordan, have received endorsements from the Cumberland County
-            Regular Republican Organization, though after 2 years of regularly attending the bi-weekly republican breakfasts, we have no idea who they are. We have attempted 
-            to make contact with all the candidates via the contact information provided from the County Clerk (email and snail mail), but only the non-endorsed candidate 
-            Sean Pignatelli has responded. To clarify, the other non-endorsed candidate Trevor Spiotto, has also not responded. 
+            The Downe Township Committee has two seats open in 2025. Two candidates, Michael Rothman and Larry Jordan, have received endorsements from the Cumberland County Regular Republican 
+            Organization. However, after two years of regularly attending the bi-weekly Republican breakfasts, we still have not seen them speak publicly or directly address voters in terms of 
+            a campaign. While all four candidates were contacted using the information they submitted to the County Clerk, only one — Sean Pignatelli — has responded. The fourth candidate, 
+            Trevor Spiotto, is also running without the county endorsement and has likewise remained silent.
             <br>
             <br>
-            Sean Pignatelli is the only candidate in the Downe Township race with a clearly known, accessible platform and a known proven record of hands-on service — from 
-            defending the local school to revitalizing public spaces and pushing for real transparency. While others appear to stay quiet, Sean shows up, speaks up, and 
-            lays out real plans. As far as I’m concerned, he’s the only viable choice — because he’s the only one who’s actually told us what he stands for. You can review our 
+            Sean Pignatelli is the only candidate in this race who has laid out a clear, accessible agenda and maintained consistent two-way communication with the public. He has a track 
+            record of hands-on community service — from revitalizing public spaces to defending the local school system — and continues to advocate for transparency and citizen involvement.
+            <br>
+            <br>
+            That said, we have since learned that Rothman, Jordan, and Spiotto have each held public service roles or engaged in community efforts. But without campaign materials, 
+            statements, or responses, voters are left to guess at their goals moving forward. Until that changes, Pignatelli remains the only candidate offering a full view into what he 
+            stands for — and how he plans to serve.
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
