ld1 race updates

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -263,6 +263,16 @@
             </ul>
         </div>  
     </details>
+
+    <br>
+
+    <div class="video-box-modal can-sec">
+        <h3 class="video-heading">Assembly GOP Video Biography</h3>
+
+        <iframe src="https://www.youtube.com/embed/ItquVZ9jd3w?si=SCZGSKkEAK9bWrpt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <br>
             
      <div class="candidate-agenda">
 
@@ -271,15 +281,30 @@
                 <ul>
                     <li><strong>Reduce Taxes, Government Spending & State Debt</strong><br>
                         Committed to restoring fiscal sanity by cutting taxes and limiting government overreach.</li>
+                        <br>
                     <li><strong>Oppose “Giveaways” to Illegal Immigrants</strong><br>
                         Stand against using taxpayer resources to support undocumented individuals.</li>
+                        <br>
                     <li><strong>Enhance South Jersey Infrastructure, Healthcare & Education</strong><br>
                         Invest in foundational systems that benefit working families and communities.</li>
+                        <br>
                     <li><strong>Promote Small Business Recovery and Growth</strong><br>
                         Foster economic development by supporting locally owned businesses.</li>
+                        <br>
                     <li><strong>Defend Law Enforcement and Public Safety</strong><br>
                         Uphold policies that respect and strengthen police and emergency services.</li>
                   </ul>
+                  <br>
+                  <br>
+                  <p>
+                    Assemblyman Antwan McClellan has sponsored a broad range of legislation focused on regional equity, small business growth, and infrastructure access—particularly for 
+                    South Jersey. His proposals include expanding loan access to broadband providers (A3050), eliminating tax exemption caps in Urban Enterprise Zones (A3059), and creating
+                    manufacturing-focused grants and marketing for southern counties (A3057, A3058). He has also supported healthcare measures like requiring mammogram coverage based on medical 
+                    need (A3053, “Michelle’s Law”) and trauma-informed training for child custody cases (A3062). On the accountability front, McClellan has advocated for timely crime data 
+                    reporting (A3063), restoring in-person state services (A3054), and ensuring all counties have access to MVC services (A3052). He has also worked on policy reforms around 
+                    property taxation (A3064, ACR95) and veterans' services (A3055, AJR212), while expressing concern over recent DEP environmental rulemaking (ACR150). Overall, his record 
+                    highlights a commitment to practical local governance, economic development in underserved regions, and improving access to state-level services.
+                  </p>
             </div>
             
             <h4 class="sub-heading">Candidates Forum Statements from 2023 (he was running for the same position)</h4>
