--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -133,7 +133,8 @@
             Meanwhile, we were able to meet up with Carolyn Rush and Brandon Saffold at a local meet n greet with Steven Fulop. They agreed to do a podcast style interview,
             which we have posted on their pages. We touched on many issues and you can get a good impression of their overall vision and personalities. We plan to do more 
             correspondence with them as both the primary and general elections progress, as at least one of them will get through to the generals. Unfortunately, after reaching 
-            out to Carol Sabo several different ways, we have yet to hear back from her.
+            out to Carol Sabo several different ways, we have yet to hear back from her... though we have been able to recently find her campaign site, which remains to appear as a 
+            work-in-progress.
             <br> 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
