--- a/child_pages/cc-elections/Candidates/simmons.html
+++ b/child_pages/cc-elections/Candidates/simmons.html
@@ -192,7 +192,7 @@
 
              </div>
 
-             <button class="quick-summary-reopen">quick summary</button>
+             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
                  <p>This election is on June 10th, 2025</p>
@@ -213,7 +213,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low to Below Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
