governor experience chart started

--- a/child_pages/cc-elections/governor.html
+++ b/child_pages/cc-elections/governor.html
@@ -184,6 +184,15 @@
 
         <button class="quick-summary-reopen">quick election summary</button>
 
+        <br>
+
+        <a href="../cc-elections/governor_experience_chart.html"
+                style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
+                Candidate Background and Experience Chart
+        </a>
+
+        <br>
+
         <div class="sb-top-box"> 
             <h3>PRIMARY ELECTION DATE: June 10th, 2025</h3>
             <h2>SAMPLE BALLOT</h2>
