experience chart updates and key differentiators chart test

--- a/child_pages/cc-elections/Candidates/gottheimer.html
+++ b/child_pages/cc-elections/Candidates/gottheimer.html
@@ -127,10 +127,10 @@
     
 
      <div class="title-info">
-        <h2>Chris Konawell</h2>
+        <h2>Josh Gottheimer</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
-             <div class="position">State Assembly - Legislative District 3</div>
+             <div class="position">Governor</div>
          </div>
          <div class="incum-or-challenger">
              <div class="incumbent inactive">Incumbent</div>
