--- a/child_pages/cc-elections/Candidates/spiller.html
+++ b/child_pages/cc-elections/Candidates/spiller.html
@@ -127,7 +127,7 @@
     
 
      <div class="title-info">
-        <h2>Mikie Sherrill</h2>
+        <h2>Sean Spiller</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Governor</div>
