lawrence township update

--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -115,11 +115,14 @@
               <h6 class="page-title">John Tisa</h6>
               <p>          
 
-                Incumbent John Tisa is a familiar face in Lawrence Township, with regular attendance at Republican events and a record of public service. Longtime residents may already have a 
-                sense of his values and approach, and his continued involvement suggests a genuine commitment to the role. That said, for newer residents, younger voters, and independents 
-                hoping to fairly compare both candidates, there’s currently a lack of accessible, campaign-specific information. With no public website, no policy outline, and minimal 
-                participation in broader outreach efforts, Tisa falls short of modern transparency standards—not due to absence, but due to an outdated communication model. A few intentional 
-                steps—such as a published platform and participation in a public candidates forum—would make his candidacy much more accessible to today’s voter expectations.
+                Incumbent John Tisa remains a familiar face in Lawrence Township, with regular attendance at Republican events, ongoing service on the Township Committee, and an 
+                upcoming meet-and-greet scheduled to engage the public. Longtime residents may already have a sense of his values and leadership style. However, for newer 
+                residents, younger voters, and those simply trying to make a fully informed choice, Tisa has not provided accessible campaign-specific information. He has no 
+                public website, no platform outlining policy stances, and minimal participation in broader voter outreach efforts. When offered an opportunity to share 
+                information through InformTheVoteNJ.com, he declined, stating, "If I had an opponent who was a valid candidate, I would reach out to you." While his community 
+                presence is acknowledged, the lack of basic issue positions leaves the average voter without the tools needed to compare candidates meaningfully. As a result, 
+                his transparency and accessibility rating has been downgraded to the lowest level on this site, reflecting the modern expectation that candidates offer clear, 
+                accessible information to all voters—not just those already familiar with local politics.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -137,11 +140,33 @@
               <p>          
 
                 John Tisa is currently serving on the Lawrence Township Committee and is seeking re-election. While he maintains a personal Facebook account and has some public 
-                background information, there is no campaign website, public platform, or issue-based messaging tied to this race.
+                background information, there is no dedicated campaign website, no public platform, and no clear issue-based messaging tied specifically to this race.
                 <br>
                 <br>
-                Despite being an incumbent, Tisa has not participated in any public interviews or responded to outreach efforts, leaving voters without clear insight into his 
-                priorities or plans moving forward.
+                Despite multiple outreach attempts over several months, Mr. Tisa has not provided information about his candidacy for voter access through InformTheVoteNJ.com. 
+                When approached directly at a Republican breakfast event on [date], he stated:
+                <br>
+                "If I had an opponent who was a valid candidate, I would reach out to you. My opponent is not a valid candidate."
+                <br>
+                <br>
+                In addition to his regular attendance at community breakfasts and his active service as an incumbent, Mr. Tisa is hosting a meet-and-greet in May that welcomes 
+                candidates from multiple races — a positive effort to engage with voters in person.
+                <br>
+                <br>
+                However, while these traditional forms of community presence are acknowledged, they do not solve the core problem for the broader electorate. In 2025, modern 
+                transparency expectations reasonably include providing accessible and comprehensive information about a candidate’s platform, agenda, and positions on known issues. 
+                These resources allow voters — particularly those who are newly registered, less familiar with local politics, or simply seeking to become more informed — to make 
+                meaningful comparisons between candidates.
+                <br>
+                <br>
+                Without a platform or issue stances, the average voter is left without the necessary tools to make an informed choice. Mr. Tisa’s decision not to share this 
+                information publicly means that, despite his personal visibility within the community, his candidacy remains largely inaccessible to those outside established 
+                circles.
+                <br>
+                <br>
+                Based on these factors, Mr. Tisa’s transparency and accessibility rating has been downgraded to the lowest level on this site. His attendance at official duties, 
+                participation in community events, and willingness to host an open event are noted as positives, but they do not outweigh the fundamental need for voters to have 
+                clear, accessible information about their choices in an election.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -197,10 +222,10 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Below Average to Average</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low to Below Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
@@ -247,7 +272,7 @@
         </div>  
     </details>
             
-     <div class="candidate-agenda">
+     <!-- <div class="candidate-agenda">
 
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
@@ -268,7 +293,7 @@
                      
                 </div>
    
-    </div>
+    </div> -->
 </div>   
 </body>
 </html>
