--- a/child_pages/cc-elections/lawrence_township_committee_2024.html
+++ b/child_pages/cc-elections/lawrence_township_committee_2024.html
@@ -116,13 +116,25 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Lawrence Township Committee</h6>
           <p>
-            A seat on the Lawrence Township committee is up for election this year, with incumbent John Tisa having the endorsement from the Cumberland County Regular 
-            Republican Organization. However, Charlie Woody is a strong challenger who has been running in Lawrence Township elections for several years.
-            While we have been able to meet Tisa a few times over the past several months at township meetings and republican breakfasts, it remains unclear what his 
-            overall campaign messaging is. Conversely, Charlie Woody has an in-depth campaign website where you can get a good idea of his views on what he would like to 
-            do in the township. Several issues surrounding Lawrence Township government and elections remain afloat in the public's mind, from inappropriate decorum during
-            township meetings, unclear accounting of who actually won last year's township race, to the significantly increasing health concerns of currently elected 
-            representatives. We are trying to set up a candidate's forum between Tisa and Woody, though only Woody has committed to participate.
+            A seat on the Lawrence Township Committee is up for election this year, with incumbent John Tisa endorsed by the Cumberland County Regular Republican Organization. 
+            Challenger Charlie Woody, who has run in previous Lawrence Township elections, is mounting a strong and accessible campaign effort this cycle.
+            <br>
+            <br>
+            While John Tisa maintains a visible presence at township meetings and Republican breakfasts and is hosting a meet-and-greet event in May, he has not provided 
+            accessible, campaign-specific information to the broader public. When offered the opportunity to share his platform through InformTheVoteNJ.com, he declined, stating, 
+            "If I had an opponent who was a valid candidate, I would reach out to you." As a result, voters without deep familiarity with local politics are left without clear 
+            tools to evaluate his candidacy. Tisa’s transparency and accessibility rating has been downgraded to the lowest level on this site to reflect modern voter expectations 
+            for public information.
+            <br>
+            <br>
+            In contrast, Charlie Woody maintains an in-depth and regularly updated campaign website that outlines his views and plans for the township. Woody has also committed 
+            to participating in a candidate interview with InformTheVoteNJ.com within the next few days, further demonstrating his commitment to public transparency and voter 
+            engagement.
+            <br>
+            <br>
+            Several unresolved concerns continue to shape the political atmosphere in Lawrence Township, including recurring issues with decorum during township meetings, 
+            uncertainty regarding the outcome of last year’s township race, and growing health concerns among currently elected representatives. InformTheVoteNJ.com is actively 
+            working to set up a public candidate forum ahead of the election; to date, only Woody has confirmed his willingness to participate.
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
