transparency chart for lawrence updated

--- a/child_pages/cc-elections/lawrence_township_transparency_chart.html
+++ b/child_pages/cc-elections/lawrence_township_transparency_chart.html
@@ -178,7 +178,9 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          Woody demonstrates a modern, structured campaign with direct voter outreach and issue-based communication. Tisa is a long-time presence in the township, but his approach reflects an older standard that doesn’t fully meet today’s expectations for public accessibility.
+          Woody demonstrates a modern, structured campaign with direct voter outreach and issue-based communication, though he could stand to schedule campaign events. 
+          Tisa is a long-time presence in the township, but his approach reflects an older standard that doesn’t fully meet today’s modern, tech-based expectations for public 
+          accessibility.
         </div>
       
         <div class="candidate-card">
@@ -195,10 +197,10 @@
           <h3>John Tisa</h3>
           <span class="label">Public Platform:</span><span class="value">❌ None available</span>
           <span class="label">Response to Outreach:</span><span class="value">❌ No formal participation</span>
-          <span class="label">Voter Info Participation:</span><span class="value">⚠️ Regularly visible through township meetings, No materials, vague forum response</span>
+          <span class="label">Voter Info Participation:</span><span class="value">❌ Outright declined to participate because there is "no valid opponent"</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Frequent at Republican breakfasts</span>
           <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Occasionally mentioned informally at breakfasts or scattered through township meetings</span>
-          <div class="rating">Rating: <strong>Below Average to Average</strong></div>
+          <div class="rating">Rating: <strong>Low</strong></div>
         </div>
       </div>
 
