--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -144,7 +144,7 @@
                 <br>
                 <br>
                 Despite multiple outreach attempts over several months, Mr. Tisa has not provided information about his candidacy for voter access through InformTheVoteNJ.com. 
-                When approached directly at a Republican breakfast event on [date], he stated:
+                When approached directly at a Republican breakfast event on April 26th, he stated:
                 <br>
                 "If I had an opponent who was a valid candidate, I would reach out to you. My opponent is not a valid candidate."
                 <br>
