balicki page correction

--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -249,7 +249,7 @@
 
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-                As of April 16th, the only info available regarding Capizola's current primary campaign is on the 
+                As of April 16th, the only info available regarding Balicki's current primary campaign is on the 
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">CumberlandNJDems Party Site</button></a>                 
 
             </div>
