tisa/CCRRO meet n greet update

--- a/child_pages/cc-elections/Candidates/tisa.html
+++ b/child_pages/cc-elections/Candidates/tisa.html
@@ -253,11 +253,10 @@
 
         <div class="event-card">
             <ul class="event-info">
-                <li class="name"><strong>Tisa and McClellan Meet n Greet, Cedarville Fire Hall</strong></li>
+                <li class="name"><strong>CCRRO Meet n Greet Cedarville Committee Incumbent John Tisa and General Assembly incumbent Antwan McClellan, Cedarville Fire Hall</strong></li>
                 <li class="description">Meet candidates John Tisa and Antwan McClellan</li>
-                <li class="date-and-time">05/14/25 - 4:00pm</li>
+                <li class="date-and-time">05/21/25 - 4:00pm</li>
                 <li class="location">30 Maple Ave, Cedarville, NJ 08311</li>
-                <li class="RSVP">RSVP: dgeno2383@gmail.com on or before that week's Tuesday</li>
             </ul>
         </div>  
 
