--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -241,6 +241,15 @@
 
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>CCRRO Meet n Greet Cedarville Committee Incumbent John Tisa and General Assembly incumbent Antwan McClellan , Cedarville Fire Hall</strong></li>
+                    <li class="description">Meet candidates John Tisa and Antwan McClellan</li>
+                    <li class="date-and-time">05/21/25 - 4:00pm</li>
+                    <li class="location">30 Maple Ave, Cedarville, NJ 08311</li>
+                </ul>
+            </div>  
+
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Jack Ciatarelli Town Hall, Cherry Hill American Legion</strong></li>
                     <li class="description">Meet Jack Ciatarelli and ask questions</li>
                     <li class="date-and-time">05/22/25 - 6:00pm</li>
