--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe src="https://www.youtube.com/embed/vIXRZufrri4?si=NzTb-eACPCOibxRa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                   
-                    <h3 class="video-heading-sm">Git sync test</h3>
+                    <iframe src="https://www.youtube.com/embed/cIOVLB5SKzI?si=nk8DEuMZWk-2LYcV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-heading-sm">Pignatelli Interview</h3>
                     <div class="video-sm-desc">
-                        With just a few days left, watch our final impressions video to get a decent idea of what's happened.
+                        Watch to meet Sean and get a great overview of his platform.
                     </div>
                 </div>
             </div>
